FAI-3467 Add endpoint to count the number of applications needing feedback given the vacanacy reference(s)
