# src/Recruit.Api/Models/Responses/ApplicationReview/VacancyApplicationsCountRequiringFeedback.cs
@@ -1,0 +1,3 @@
+﻿namespace SFA.DAS.Recruit.Api.Models.Responses.ApplicationReview;
+
+public record VacancyApplicationsCountRequiringFeedback(long VacancyReference, int ApplicationsRequiringFeedbackCount);
